--- a/src/components/headers/header.scss
+++ b/src/components/headers/header.scss
@@ -1,6 +1,14 @@
 header {
+  width: 100%;
+  padding: 36px 0px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(5px);
+  z-index: 9999999;
   .container {
-    background-image: url("../../assets/images/Rectangle 12.png");
+    // background-image: url("../../assets/images/Rectangle 12.png");
     max-width: 1240px;
     margin: 0 auto;
     padding: 25px 10px;
