--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -38,6 +38,13 @@
       border-radius: 20px;
       color: white;
       cursor: pointer;
+      transition: all 0.2s linear;
+
+      &:hover {
+        background-color: #fff;
+        color: blue;
+        transition: all 0.2s linear;
+      }
     }
   }
 }
