--- a/src/components/footers/footer.scss
+++ b/src/components/footers/footer.scss
@@ -17,6 +17,13 @@
         li {
           list-style-type: none;
           color: white;
+          cursor: pointer;
+          transition: all 0.2s linear;
+
+          &:hover {
+            transform: scale(1.1);
+            transition: all 0.2s linear;
+          }
         }
       }
       p {
