--- a/src/components/headers/header.scss
+++ b/src/components/headers/header.scss
@@ -1,6 +1,6 @@
 header {
   width: 100%;
-  padding: 36px 0px;
+  padding: 20px 0px;
   position: fixed;
   top: 0;
   left: 0;
@@ -26,6 +26,7 @@ header {
           border-radius: 50%;
         }
         p {
+          cursor: pointer;
           span {
             color: blue;
           }
@@ -38,6 +39,12 @@ header {
         li {
           list-style-type: none;
           cursor: pointer;
+          transition: all 0.2s linear;
+
+          &:hover {
+            transform: scale(1.1);
+            transition: all 0.2s linear;
+          }
         }
       }
 
@@ -51,6 +58,13 @@ header {
           border-radius: 20px;
           border: none;
           color: white;
+          transition: all 0.2s linear;
+          cursor: pointer;
+          &:hover {
+            background-color: #fff;
+            color: blue;
+            transition: all 0.2s linear;
+          }
         }
       }
     }
