--- a/src/components/paylasma/paylasma.scss
+++ b/src/components/paylasma/paylasma.scss
@@ -1,8 +1,6 @@
 #paylasma {
   background: rgba(196, 196, 196, 0.1);
-  //         ::-webkit-scrollbar{
-  //     width: 0px;
-  // }
+  padding-top: 50px;
   ::-webkit-scrollbar {
     width: 0px;
   }
@@ -63,6 +61,12 @@
         background: rgba(22, 93, 245, 0.6);
         border: none;
         color: white;
+        transition: all 0.2s linear;
+        cursor: pointer;
+        &:hover {
+          background-color: blue;
+          transition: all 0.2s linear;
+        }
       }
     }
 
@@ -113,6 +117,14 @@
           color: blue;
           border: none;
           margin-left: 160px;
+          border-radius: 10px;
+          transition: all 0.2s linear;
+          cursor: pointer;
+          &:hover {
+            background: blue;
+            color: #fff;
+            transition: all 0.2s linear;
+          }
         }
       }
     }
