plus tablet responsive version

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  overflow-x: hidden;
   //  padding-bottom: 64px;
 
   padding-bottom: 50px;
