--- a/src/components/paylasma/paylasma.scss
+++ b/src/components/paylasma/paylasma.scss
@@ -1,6 +1,7 @@
 #paylasma {
   background: rgba(196, 196, 196, 0.1);
   padding-top: 50px;
+  overflow-x: hidden;
   ::-webkit-scrollbar {
     width: 0px;
   }
