--- a/src/components/headers/header.scss
+++ b/src/components/headers/header.scss
@@ -7,6 +7,7 @@ header {
   background-color: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
   z-index: 9999999;
+  overflow-x: hidden;
   .container {
     // background-image: url("../../assets/images/Rectangle 12.png");
     max-width: 1240px;
