--- a/src/components/hizmet/hizmet.scss
+++ b/src/components/hizmet/hizmet.scss
@@ -2,6 +2,7 @@
   padding-top: 50px;
   padding-bottom: 50px;
   background: rgba(22, 93, 245, 0.1);
+  overflow-x: hidden;
   .container {
     max-width: 1240px;
     margin: 0 auto;
