--- a/src/components/web/web.scss
+++ b/src/components/web/web.scss
@@ -36,3 +36,45 @@
     }
   }
 }
+
+@media screen and (max-width: 900px) {
+  #web {
+    .container {
+      max-width: 1240px;
+      margin: 0 auto;
+      padding: 0 10px;
+      .web__wrapper {
+        background-image: url("../../assets/images/Rectangle\ 16.png");
+        background-repeat: no-repeat;
+        height: 530px;
+        width: 800px;
+        position: absolute;
+        top: 550px;
+        left: 35px;
+        border-radius: 20px;
+        .selam {
+          font-size: 12px;
+          text-align: center;
+          color: black;
+          margin-top: 20px;
+        }
+
+        h2 {
+          font-size: 50px;
+          margin-bottom: 22px;
+          text-align: center;
+          margin-top: 170px;
+          color: wheat;
+        }
+
+        p {
+          font-size: 18px;
+          color: white;
+          opacity: 0.6;
+          text-align: center;
+          margin-top: 22px;
+        }
+      }
+    }
+  }
+}
